--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,9 @@
 {
   "name": "smart-desk",
   "description": "ENG SUT Smart Desk",
+  "repository": "https://github.com/Nuntawut/smart-desk",
   "author": {
-    "name": "Nuntawut Kaoungku",
+    "name": "Eng SUT",
     "email": "nuntawut@sut.ac.th"
   },
   "version": "1.0.0",
