--- a/package.json
+++ b/package.json
@@ -53,16 +53,20 @@
     "@angular/platform-browser": "16.1.3",
     "@angular/platform-browser-dynamic": "16.1.3",
     "@angular/router": "16.1.3",
+    "@electron-forge/publisher-github": "6.2.1",
     "axios": "1.4.0",
     "bootstrap": "5.3.1",
     "bootstrap-icons": "1.10.5",
     "dgram": "1.0.1",
+    "electron-log": "4.4.8",
+    "electron-updater": "6.1.1",
     "jquery": "3.7.0",
     "ngx-socket-io": "4.5.1",
     "pickle": "0.2.0",
     "popper.js": "1.16.1",
     "rxjs": "7.8.1",
     "tslib": "^2.5.0",
+    "update-electron-app": "2.0.1",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
