add autoUpdate successfully

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "smart-desk",
+  "productName": "Smart Desk",
   "version": "1.0.0",
   "description": "ENG SUT Smart Desk",
   "homepage": "https://beta.sut.ac.th/ie/",
