--- a/app/package.json
+++ b/app/package.json
@@ -10,5 +10,7 @@
   "main": "main.js",
   "private": true,
   "dependencies": {
+    "electron-log": "^4.4.8",
+    "electron-updater": "^6.1.1"
   }
 }
