add autoUpdate successfully

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smart-desk",
-  "description": "ENG SUT Smart Desk",
+  "name": "desk-health",
+  "description": "Eng SUT Desk Health",
   "repository": "https://github.com/Nuntawut/smart-desk",
   "author": {
     "name": "Eng SUT",
