--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desk-health",
   "productName": "Desk Health",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Eng SUT Desk Health",
   "homepage": "https://beta.sut.ac.th/ie/",
   "repository": "https://github.com/Nuntawut/smart-desk",
@@ -55,6 +55,7 @@
     "@angular/platform-browser": "16.1.3",
     "@angular/platform-browser-dynamic": "16.1.3",
     "@angular/router": "16.1.3",
+    "@popperjs/core": "2.11.8",
     "axios": "1.4.0",
     "bootstrap": "5.3.1",
     "bootstrap-icons": "1.10.5",
