change server and fix

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "desk-health",
-  "description": "Eng SUT Desk Health",
+  "name": "engi-take-a-break",
+  "description": "ENGi Take a Break",
   "repository": "https://github.com/Nuntawut/smart-desk",
   "author": {
     "name": "Eng SUT",
