--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "desk-health",
-  "productName": "Desk Health",
+  "name": "engi-take-a-break",
+  "productName": "ENGi Take a Break",
   "version": "1.0.5",
-  "description": "Eng SUT Desk Health",
+  "description": "ENGi Take a Break",
   "homepage": "https://beta.sut.ac.th/ie/",
   "repository": "https://github.com/Nuntawut/smart-desk",
   "author": {
@@ -34,7 +34,7 @@
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
     "web:build": "npm run build -- -c web-production",
-    "electron": "electron",
+    "electron": "ng build && electron .",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
@@ -62,7 +62,6 @@
     "electron-log": "4.4.8",
     "electron-updater": "6.1.1",
     "jquery": "3.7.0",
-    "ngx-socket-io": "4.5.1",
     "nodemon": "3.0.1",
     "popper.js": "1.16.1",
     "rxjs": "7.8.1",
@@ -109,7 +108,9 @@
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
     "wait-on": "7.0.1",
-    "webdriver-manager": "12.1.9"
+    "webdriver-manager": "12.1.9",
+    "webpack": "5.93.0",
+    "webpack-cli": "5.1.4"
   },
   "engines": {
     "node": ">= 16.14.0 || >= 18.10.0"
